--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/dream_team_Cinemania/",
+    "build": "vite build --base=/testCinemania/",
     "preview": "vite preview"
   },
   "devDependencies": {
